Update flexbox prefixing, apply tablesaw attributes to properties table, allow long words to break in browse tables and fix action alignment. (Fix #875)

--- a/application/asset/sass/_screen.scss
+++ b/application/asset/sass/_screen.scss
@@ -1107,9 +1107,14 @@ div[role="main"] {
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    word-break: break-word;
 
     & > * {
         flex: 1;
+    }
+
+    & > .actions {
+        flex: 0;
     }
 }
 
